--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="friendslist">
 <head>
     <link rel="stylesheet" href="./style.css">
     <title>My first Angular App</title>
 </head>
-<body>
-    <p> Woo</p>
+<body ng-controller="mainCtrl">
+    <h1> My Friends</h1>
+    <div ng-repeat="friend in friends">
+        <p> {{ friend}}</p>
+    </div>
+        <p> Woo</p>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.4/angular.min.js"></script>
+    <script src="./js/app.js"> </script>
+    <script src="./js/mainCtrl.js"> </script>
     
 </body>
 </html>
