--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="friendslist">
-<head>
-    <link rel="stylesheet" href="./style.css">
-    <title>My first Angular App</title>
-</head>
-<body ng-controller="mainCtrl">
-    <h1> My Friends</h1>
+<html ng-app="friendsList">
+  <head>
+    <title>My first angular app!</title>
+
+    <link rel="stylesheet" href="./styles.css">
+  </head>
+
+  <body ng-controller="mainCtrl">
+
+    <h1>My Friends</h1>
     <div ng-repeat="friend in friends">
-        <p> {{ friend }}</p>
+      <p>{{ friend }}</p>
     </div>
-        <p> Woo</p>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.4/angular.min.js"></script>
-    <script src="./js/app.js"> </script>
-    <script src="./js/mainCtrl.js"> </script>
-    
-</body>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.32/angular.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/mainCtrl.js"></script>
+  </body>
 </html>
